# kpa-backend

./: .env-example  .gitignore  Dockerfile  KPA-backend.postman_collection.json  Makefile  Readme.md  docker-compose-dev.yml  docker-compose.yml  dockerfile.env-example  openapi.yaml  postgres.env-example  pyproject.toml
account/: models.py
account/migrations/: 0001_initial.py
data/: sample_wheel_specs_data.py
forms/: filters.py  urls.py
forms/migrations/: 0001_initial.py
forms/models/: WheelSpecs.py  __init__.py
forms/serializers/: WheelSpecsSerializer.py  __init__.py
forms/views/: WheelSpecsView.py  __init__.py
kpa/: asgi.py  urls.py
kpa/settings/: __init__.py  application.settings.py
kpa/settings/templates/: local.settings.py
utils/: base_models.py
